Correction de la page Nos Offres

--- a/site-immobilier/src/app/components/navbar/navbar.html
+++ b/site-immobilier/src/app/components/navbar/navbar.html
@@ -18,9 +18,9 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav align-items-center lienMenu">
-            <li class="nav-item"><a class="nav-link colorMenu p-3" href="/">QUI SOMMES NOUS?</a></li>
+            <li class="nav-item"><a class="nav-link colorMenu p-3" routerLink="/">QUI SOMMES NOUS?</a></li>
             <li class="nav-item"><a class="nav-link colorMenu p-3" href="#">NOTRE METIER</a></li>
-            <li class="nav-item"><a class="nav-link colorMenu p-3" href="#">NOS OFFRES</a></li>
+            <li class="nav-item"><a class="nav-link colorMenu p-3" routerLink="/nos-offres">NOS OFFRES</a></li>
             <li class="nav-item"><a class="nav-link colorMenu p-3" href="#">ACTUALITES</a></li>
             <li class="nav-item"><a class="nav-link colorMenu p-3" href="#">NOS RÉFÉRENCES</a></li>
             <li class="nav-item"><a class="nav-link colorMenu p-3" href="#">NOUS CONTACTER</a></li>
