--- a/site-immobilier/src/app/pages/recherche-offres/recherche-offres.html
+++ b/site-immobilier/src/app/pages/recherche-offres/recherche-offres.html
@@ -1,1 +1,5 @@
-<p>recherche-offres works!</p>
+<div class="header-bg">
+    <app-navbar></app-navbar>
+    <app-annonces></app-annonces>
+</div>
+<app-footer></app-footer>
