--- a/site-immobilier/src/app/app.html
+++ b/site-immobilier/src/app/app.html
@@ -1,9 +1,1 @@
-<div class="header-bg">
-    <app-navbar></app-navbar>
-    <app-header></app-header>
-</div>
-<div class="building-bg">
-    <app-qui-sommes-nous></app-qui-sommes-nous>
-    <app-nos-offres></app-nos-offres>
-</div>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
