--- a/site-immobilier/src/app/components/header/header.scss
+++ b/site-immobilier/src/app/components/header/header.scss
@@ -1,4 +1,4 @@
-
+@use '../../../variables' as *;
 .header {
     margin-top: 10%;
     height: 60vh;
@@ -6,11 +6,56 @@
         font-size: 55px;
     }
 }
+.custom-input {
+    background-image: url('../../../../public/images/PLUS.png'); 
+    background-size: 12px;
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    height: 100%;
+}
+
+.checkbox-button {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    flex: 1;
+    min-width: 0;
+
+    input[type="checkbox"] {
+        display: none;
+    }
+
+    span {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        padding: 12px 16px;
+        background-color: $orange;
+        color: white;
+        font-size: 14px;
+        font-weight: bold;
+        border-radius: 16px;
+        transition: all 0.3s ease;
+        border: 2px solid $orange;
+    }
+
+    input[type="checkbox"]:checked + span {
+        opacity: 1;
+        transform: scale(1.05);
+    }
+    
+    input[type="checkbox"]:not(:checked) + span {
+        opacity: 0.7;
+        background-color: $orange;
+        border-color: $orange;
+    }
+}
 
 
 button {
     font-size: 16px;
-    background-color: #f7931e;
+    background-color: $orange;
     color: white;
     padding: 12px 28px;
 }
